--- a/movieTrending/Controllers/MainViewController/MainViewController.xib
+++ b/movieTrending/Controllers/MainViewController/MainViewController.xib
@@ -10,6 +10,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainViewController" customModule="movieTrending" customModuleProvider="target">
             <connections>
+                <outlet property="activityIndicator" destination="nS2-Py-GXT" id="Jj0-d3-xlK"/>
+                <outlet property="tableView" destination="Mkp-am-2GN" id="RC0-bh-MFw"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -18,23 +20,29 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Main.." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MGW-db-cqz">
-                    <rect key="frame" x="173.66666666666666" y="415.66666666666669" width="46" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Mkp-am-2GN">
+                    <rect key="frame" x="0.0" y="59" width="393" height="793"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
+                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="nS2-Py-GXT">
+                    <rect key="frame" x="178" y="407.66666666666669" width="37" height="37"/>
+                    <color key="color" systemColor="labelColor"/>
+                </activityIndicatorView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="MGW-db-cqz" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="Cc7-j3-rBy"/>
-                <constraint firstItem="MGW-db-cqz" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="y1D-yU-jg4"/>
+                <constraint firstItem="nS2-Py-GXT" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="g12-Y6-BFb"/>
+                <constraint firstItem="nS2-Py-GXT" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="lzn-3W-DZY"/>
             </constraints>
-            <point key="canvasLocation" x="71" y="20"/>
+            <point key="canvasLocation" x="70.992366412213741" y="19.718309859154932"/>
         </view>
     </objects>
     <resources>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
